k3s/traefik/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.spacebooking.com`)
      middlewares:
        - name: test-basic-auth
      services:
        - kind: TraefikService
          name: api@internal
